plugins {
    id 'java'
    id 'org.springframework.boot' version '2.6.7'
    id 'io.spring.dependency-management' version '1.1.3'
}

group = 'com.beyzanuryuksel'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security:2.1.9.RELEASE'
    implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.2'
    compileOnly 'org.projectlombok:lombok'
    implementation("org.postgresql:postgresql:42.5.1")
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    // swagger
    implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
    implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
    implementation("org.springframework.boot:spring-boot-starter-validation:3.0.4")
}

tasks.named('test') {
    useJUnitPlatform()
}
